--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -427,6 +427,7 @@
     height: $custom-range-height;
     padding: 0;
     margin: 0;
+    vertical-align: middle;
     background-color: transparent;
     appearance: none;
 
