more Iconic url changes

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -781,7 +781,7 @@ $custom-range-min-width:            8rem !default;  // Browser default seems to 
 
 // Form validation
 // =====
-// Icons from OpenIconic: https://useiconic.com/open
+// Icons from OpenIconic: https://github.com/iconic/open-iconic
 $form-feedback-margin-top:      $form-text-margin-top !default;
 $form-feedback-font-size:       $small-font-size !default;
 $form-feedback-valid-color:     map-get($base-colors, "success") !default;
