--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -150,7 +150,7 @@
             //top: 50%;
             left: -$custom-switch-gutter;
             pointer-events: auto;
-            transition: $switch-transition;
+            @include transition($switch-transition);
             //transform: translateY(-50%);
         }
 
