--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -11,6 +11,9 @@
 // Settings variables
 @import "settings";
 
+// Enable/disable granular options
+@import "settings_options";
+
 // Mixins
 @import "mixins";
 
