--- a/scss/utilities/_screen-reader.scss
+++ b/scss/utilities/_screen-reader.scss
@@ -1,28 +1,36 @@
 // Screenreaders
-.sr-only {
-    @include sr-only();
+@if $enable-utility-sronly-common {
+    .sr-only {
+        @include sr-only();
+    }
 }
 
-.sr-only-focusable {
-    @include sr-only-focusable();
+@if $enable-utility-sronly-focusable {
+    .sr-only-focusable {
+        @include sr-only-focusable();
+    }
 }
 
 // Responsive visibility utilities
 @each $bp in $utility-screen-reader-breakpoints {
     // Skip smallest breakpoint for up (equivalent to `.sr-only`)
-    @if breakpoint-min($bp, $grid-breakpoints) != null {
-        .sr-only-#{$bp} {
-            @include media-breakpoint-up($bp) {
-                @include sr-only();
+    @if $enable-utility-sronly-responsive {
+        @if breakpoint-min($bp, $grid-breakpoints) != null {
+            .sr-only-#{$bp} {
+                @include media-breakpoint-up($bp) {
+                    @include sr-only();
+                }
             }
         }
     }
 
     // Skip largest breakpoint for down (equivalent to `.sr-only`)
-    @if breakpoint-max($bp, $grid-breakpoints) != null {
-        .sr-only-#{$bp}-down {
-            @include media-breakpoint-down($bp) {
-                @include sr-only();
+    @if $enable-utility-sronly-responsive-down {
+        @if breakpoint-max($bp, $grid-breakpoints) != null {
+            .sr-only-#{$bp}-down {
+                @include media-breakpoint-down($bp) {
+                    @include sr-only();
+                }
             }
         }
     }
