--- a/scss/utilities/_shadow.scss
+++ b/scss/utilities/_shadow.scss
@@ -1,10 +1,12 @@
 // stylelint-disable declaration-no-important
 
 // Shadows
-@if (type-of($shadows) == "map" and length($shadows) != 0) {
-    @each $key, $value in $shadows {
-        .shadow-#{$key} {
-            box-shadow: #{$value} !important;
+@if $enable-utility-shadow {
+    @if (type-of($shadows) == "map" and length($shadows) != 0) {
+        @each $key, $value in $shadows {
+            .shadow-#{$key} {
+                box-shadow: #{$value} !important;
+            }
         }
     }
 }
