--- a/scss/utilities/_float.scss
+++ b/scss/utilities/_float.scss
@@ -1,15 +1,17 @@
-@each $breakpoint in $utility-float-breakpoints {
-    $bprule: breakpoint-designator($breakpoint);
+@if $enable-utility-float {
+    @each $breakpoint in $utility-float-breakpoints {
+        $bprule: breakpoint-designator($breakpoint);
 
-    @include media-breakpoint-up($breakpoint) {
-        .float#{$bprule}-start {
-            @include float-start;
-        }
-        .float#{$bprule}-end {
-            @include float-end;
-        }
-        .float#{$bprule}-none {
-            @include float-none;
+        @include media-breakpoint-up($breakpoint) {
+            .float#{$bprule}-start {
+                @include float-start;
+            }
+            .float#{$bprule}-end {
+                @include float-end;
+            }
+            .float#{$bprule}-none {
+                @include float-none;
+            }
         }
     }
 }
